[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
argon2 = "0.5.3"
rand_core = "0.6.4"
