[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1", features = ["derive"] }
mysql = "24.0"
dotenvy = "0.15"
argon2 = "0.5.3"
rand_core = "0.6.4"
rand = "0.8.5"
image = { version = "0.25.2", default-features = false, features = ["png", "jpeg"] }
csv = "1.3"
calamine = "0.24"
